<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.esfinge</groupId>
    <artifactId>virtuallab</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>VirtualLab Maven Webapp</name>
    <url>http://maven.apache.org</url>
    <packaging>war</packaging>

    <!-- SPRING-BOOT PARENT -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.7.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <springframework.version>4.3.0.RELEASE</springframework.version>
        <jackson.library>2.7.5</jackson.library>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.java>11</version.java>
        <version.tomee>8.0.16</version.tomee>
        <version.microprofile>1.3</version.microprofile>
        <version.arquillian>1.1.13.Final</version.arquillian>
        <version.shrinkwrap.resolvers>3.1.3</version.shrinkwrap.resolvers>
    </properties>

    <dependencies>
        <!-- SPRING-BOOT DEPENDENCIES -->
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>tomee</artifactId>
            <version>8.0.0</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.hibernate.validator</groupId>
                    <artifactId>hibernate-validator</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
        </dependency>
        <dependency>
            <groupId>com.kjetland</groupId>
            <artifactId>mbknor-jackson-jsonschema_2.12</artifactId>
            <version>1.0.34</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>bootstrap</artifactId>
            <version>4.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>jquery</artifactId>
            <version>3.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>datatables</artifactId>
            <version>1.10.19</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>jquery-maskedinput</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>font-awesome</artifactId>
            <version>5.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>underscorejs</artifactId>
            <version>1.8.3</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>chartjs</artifactId>
            <version>2.8.0</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>leaflet</artifactId>
            <version>1.5.1</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>momentjs</artifactId>
            <version>2.24.0</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.8.3</version>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.18.1-GA</version>
        </dependency>
        <dependency>
            <groupId>org.apache.bcel</groupId>
            <artifactId>bcel</artifactId>
            <version>6.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-jexl3</artifactId>
            <version>3.0</version>
        </dependency>
        <!-- DATABASE DEPENDENCIES -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate.javax.persistence</groupId>
            <artifactId>hibernate-jpa-2.1-api</artifactId>
            <version>1.0.0.Final</version>
        </dependency>

        <!-- ESFINGE FRAMEWORKS -->
        <dependency>
            <groupId>net.sf.esfinge</groupId>
            <artifactId>metadata</artifactId>
            <version>1.5.10</version>
        </dependency>
        <dependency>
            <groupId>net.sf.esfinge</groupId>
            <artifactId>querybuilder-jpa1</artifactId>
            <version>1.8.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>net.sf.esfinge</groupId>
            <artifactId>classmock</artifactId>
            <version>2.3</version>
            <scope>test</scope>
        </dependency>
        <!-- TEST DEPENDENCIES -->
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-all</artifactId>
            <version>6.0_BETA</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.9.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>virtuallab</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <configuration>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.tomee.maven</groupId>
                    <artifactId>tomee-maven-plugin</artifactId>
                    <version>${version.tomee}</version>
                    <executions>
                        <execution>
                            <id>executable-jar</id>
                            <goals>
                                <goal>exec</goal>
                            </goals>
                            <phase>package</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${version.java}</source>
                    <target>${version.java}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.tomee.maven</groupId>
                <artifactId>tomee-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <argLine>
                        -Dfile.encoding=UTF-8
                        --add-opens=java.base/java.net=ALL-UNNAMED
                        --add-opens=java.base/java.lang.ref=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.security=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                        --add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED
                        --add-opens=java.prefs/java.util.prefs=ALL-UNNAMED
                        --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
                        --add-opens=java.desktop/javax.swing.text=ALL-UNNAMED
                        --add-opens=java.desktop/javax.swing=ALL-UNNAMED
                        --add-opens=java.desktop/java.awt=ALL-UNNAMED
                        --add-opens=java.desktop/java.awt.event=ALL-UNNAMED
                        --add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED
                        --add-opens=java.desktop/javax.swing.plaf.synth=ALL-UNNAMED
                        --add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED
                        --add-opens=java.desktop/sun.awt.shell=ALL-UNNAMED
                        --add-opens=java.desktop/sun.awt.im=ALL-UNNAMED
                        --add-exports=java.desktop/sun.awt=ALL-UNNAMED
                        --add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
                        --add-exports=java.desktop/com.sun.beans.editors=ALL-UNNAMED
                        --add-exports=java.desktop/sun.swing=ALL-UNNAMED
                        --add-exports=java.desktop/sun.awt.im=ALL-UNNAMED
                        --add-exports=java.desktop/com.sun.java.swing.plaf.motif=ALL-UNNAMED
                        --add-exports=java.desktop/com.apple.eio=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                        --add-modules=jdk.jshell
                        --add-opens=jdk.jshell/jdk.jshell=ALL-UNNAMED
                        --add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED
                        --add-exports=jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED
                        --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                        --add-exports=jdk.internal.opt/jdk.internal.opt=ALL-UNNAMED
                        --add-exports=java.management/sun.management=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
